# find_duplicates

./: Cargo.toml  LICENSE  readme.md
src/: main.rs
tests/test_dir/: file1.txt  file2.txt  file4.txt
tests/test_dir/sub_dir1/: file11.txt
