[package]
name = "find_duplicates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
md-5 = "0.10.5"
base16ct = "0.1.1"
clap = { version = "4.0", features = ["derive"] }
serde = "1.0.147"
serde_json = "1.0.89"
